--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -6,3 +6,36 @@
     light --default,
     dark --prefersdark;
 }
+
+html[data-theme="light"] .maplibregl-popup-content {
+  @apply px-5;
+}
+html[data-theme="dark"] {
+  .maplibregl-popup-content {
+    @apply text-white bg-gray-700;
+  }
+
+  .maplibregl-popup-anchor-bottom .maplibregl-popup-tip,
+  .maplibregl-popup-anchor-bottom-right .maplibregl-popup-tip,
+  .maplibregl-popup-anchor-bottom-left .maplibregl-popup-tip {
+    @apply border-t-gray-700;
+  }
+
+  .maplibregl-popup-anchor-top .maplibregl-popup-tip,
+  .maplibregl-popup-anchor-top-right .maplibregl-popup-tip,
+  .maplibregl-popup-anchor-top-left .maplibregl-popup-tip {
+    @apply border-b-gray-700;
+  }
+
+  .maplibregl-popup-anchor-left .maplibregl-popup-tip {
+    @apply border-r-gray-700;
+  }
+
+  .maplibregl-popup-anchor-right .maplibregl-popup-tip {
+    @apply border-l-gray-700;
+  }
+}
+
+.maplibregl-popup-close-button {
+  @apply text-xl px-1.5;
+}
