changed app themes + added location relation schema from Drizzle

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -4,7 +4,9 @@
 @plugin "daisyui" {
   themes:
     light --default,
-    dark --prefersdark;
+    dark --prefersdark,
+    winter,
+    night;
 }
 
 @layer utilities {
